# storm-cloud-server

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SESSION_SUMMARY.md  check-env.sh  docker-compose.yml  entrypoint.sh  ff  manage.py  mercury_config.toml  mercury_report_20251211_132743.html  mercury_report_20251211_144227.html  mercury_test_commands.json  opencode.jsonc  pyproject.toml  requirements.txt  schema.yml
.github/ISSUE_TEMPLATE/: sentry-monitoring.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
_core/: asgi.py  settings.py  urls.py  wsgi.py
_core/settings/: __init__.py  base.py  dev.py  production.py
_core/storage_root/5fe453f8-e0a9-4fec-82d3-6dee5ce77b3a/: perf.txt
_core/storage_root/apikey:48fbdb60-6b7a-4e0c-a337-aed7e27da893/: perf.txt
_core/storage_root/apikey:4cfe5a1d-cdb7-435a-94bd-df1091b114b7/: perf.txt
_core/storage_root/apikey:b2b3ef20-7f68-44fb-813b-d3d01d5e31a2/: perf.txt
_core/storage_root/apikey:d55bf728-3d02-4e57-8336-4fa6fefe2784/: perf.txt
_core/templates/public/: base.html  error.html  password.html  share.html
accounts/: admin.py  admin_invite_api.py  admin_invite_serializers.py  api.py  api_old.py  apps.py  authentication.py  enrollment_api.py  enrollment_serializers.py  models.py  permissions.py  platform_api.py  platform_serializers.py  serializers.py  signal_handlers.py  signals.py  tasks.py  typing.py  utils.py
accounts/management/commands/: cleanup_expired_tokens.py  create_organization.py  create_test_user.py  createsuperuser.py  generate_api_key.py  invite_client.py  revoke_api_key.py
accounts/migrations/: 0001_initial.py  0002_apikey_revoked_at_apikey_scope_userprofile_and_more.py  0002_platforminvite.py  0003_auto_20251205_1700.py  0003_platforminvite_enrolled_user.py  0004_add_invite_tracking_fields.py  0004_add_storage_quota_fields.py  0005_account_show_email_to_org_account_show_name_to_org_and_more.py  0005_add_permission_flags.py  0006_apikey_webhook_enabled_apikey_webhook_last_status_and_more.py
accounts/services/: __init__.py  webhook.py
accounts/tests/: __init__.py  factories.py  test_account_management.py  test_admin_invite_api.py  test_admin_keys.py  test_admin_organizations.py  test_admin_users.py  test_api_keys.py  test_email_verification.py  test_enrollment_api.py  test_login_logout.py  test_management_commands.py  test_models.py  test_permissions.py  test_platform_enrollment.py  test_registration.py  test_signals.py  test_utils.py  test_webhook.py  test_webhook_trigger.py
accounts/tests/mercury/: test_auth_performance.py
api/: __init__.py
api/v1/: urls.py
architecture/records/: 000-risk-matrix.md  001-service-granularity.md  002-storage-backend-strategy.md  003-authentication-model.md  004-API-versioning-strategy.md  005-cli-first-development-strategy.md  006-encryption-strategy.md  007-rate-limiting-strategy.md  007-rate-limiting.md  008-federated-read-model.md  009-index-rebuild-strategy.md  010-encrpytion-implementation.md
cms/: admin.py  admin_api.py  admin_urls.py  api.py  models.py  serializers.py  urls.py  validators.py
cms/management/commands/: cms_cleanup.py
cms/migrations/: 0001_initial.py  0002_pagefilemapping.py  0003_pagestats.py  0004_add_content_flags.py
cms/tests/: test_admin_api.py  test_api.py  test_flags.py
core/: apps.py  exceptions.py  middleware.py  models.py  throttling.py  utils.py  views.py
core/services/: __init__.py  bulk.py  encryption.py  index_sync.py
core/storage/: __init__.py  base.py  local.py
core/tests/: base.py  test_bulk_service.py  test_encryption.py  test_index_sync.py  test_storage_backend.py  test_symlink_security.py  test_utils.py
deploy/: GIT-RECOVERY-GUIDE.md  PLAYBOOK_FIXES.md  README.md  SECRETS_MIGRATION.md  cleanup-failed-deployment.sh  config.example.yml  dotenv.j2  nginx-stormcloud.conf.j2
deploy/ansible/: check-galaxy-deps.sh  destroy.yml  inventory.yml  playbook.yml  requirements.yml
deploy/ansible/templates/: dotenv.j2  nginx-stormcloud.conf.j2
deploy/ansible/tests/: README.md  test_dotenv_parser.py  test_playbook.yml
docs_app/: apps.py  spellbook_manifest.json
docs_content/: api-quickstart.md  introduction.md  setup.md  share-links-api.md
docs_content/accounts/: authentication.md
docs_content/production/: monitoring.md
docs_content/social/: gotosocial.md
docs_content/storage/: admin-file-access.md  bulk-operations.md  encryption.md  files.md
scripts/: backup.sh  preview_share_templates.py  rebuild-index.sh  restore.sh  setup.sh
social/: __init__.py  admin.py  apps.py  client.py  exceptions.py  middleware.py  models.py  signals.py  utils.py
social/management/commands/: cleanup_expired_social_posts.py
storage/: admin.py  admin_api.py  api.py  api_legacy.py  apps.py  models.py  search_api.py  serializers.py  services.py  shared_api.py  signal_handlers.py  signals.py  tasks.py  utils.py  views.py
storage/api/: __init__.py  admin.py  audit.py  bulk.py  directories.py  files.py  shares.py  transfer.py  utils.py
storage/management/commands/: encrypt_existing_files.py  rebuild_index.py
storage/migrations/: 0001_initial.py  0002_add_encryption_fields.py  0002_alter_storedfile_unique_together_and_more.py  0003_add_share_links.py  0003_fileauditlog_justification_alter_fileauditlog_action_and_more.py  0004_add_sort_position.py  0005_add_file_audit_log.py  0005_add_social_posting_fields.py  0006_add_encrypted_size_field.py
storage/tests/: factories.py  test_admin_files.py  test_api.py  test_bulk_api.py  test_encrypt_command.py  test_encryption_integration.py  test_file_audit.py  test_file_content.py  test_search.py  test_share_links.py  test_shared_storage.py  test_tasks.py
(+9 files in other folders)
