# =============================================================================
# Storm Cloud Server - Project Configuration
# =============================================================================

[project]
name = "storm-cloud-server"
version = "0.1.0"
description = "Open source cloud storage with markdown CMS"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}

# =============================================================================
# MyPy Type Checking Configuration
# =============================================================================

[tool.mypy]
# Python version targeting
python_version = "3.12"
mypy_path = "$MYPY_CONFIG_FILE_DIR"

# General strictness settings (gradual typing - relaxed by default)
warn_return_any = false              # Allow Any returns (for gradual adoption)
warn_unused_configs = true           # Warn about unused MyPy config
warn_redundant_casts = true          # Warn about unnecessary casts
warn_unused_ignores = true           # Warn about unused type: ignore comments
warn_unreachable = true              # Warn about unreachable code
strict_equality = true               # Strict comparison checks

# Type hint requirements (gradual adoption - relaxed by default)
disallow_untyped_defs = false        # Don't require all functions to have types (yet)
disallow_incomplete_defs = false     # Allow partial type hints
check_untyped_defs = true            # Check bodies of untyped functions
disallow_untyped_calls = false       # Allow calling untyped functions

# Import handling
ignore_missing_imports = true        # Ignore missing type stubs for external libraries
no_implicit_optional = true          # Require explicit Optional[] for None defaults
strict_optional = true               # Enable strict Optional checking

# Django plugin configuration (critical for ORM support)
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

# Output configuration
show_error_codes = true              # Show error codes (e.g., [import-untyped])
show_column_numbers = true           # Show column numbers in errors
pretty = false                       # Must be false for stormcheck to parse output
color_output = true                  # Colorize output

# Exclude patterns (don't type-check these)
exclude = [
    "^.*/migrations/.*\\.py$",       # Django migrations (auto-generated)
    "^venv/.*$",                     # Virtual environment
    "^build/.*$",                    # Build artifacts
    "^dist/.*$",                     # Distribution files
]

# =============================================================================
# Strict Mode for Critical Modules (Production Code)
# =============================================================================
# These modules are security/business-critical and must have full type hints

[[tool.mypy.overrides]]
module = "storage.api"
disallow_untyped_defs = true         # All functions must have type hints
disallow_incomplete_defs = true      # No partial type hints allowed
warn_return_any = true               # Warn if function returns Any
disable_error_code = ["attr-defined", "misc"]  # Suppress Django ORM false positives

[[tool.mypy.overrides]]
module = "*.models"
disable_error_code = ["misc"]        # Suppress nullable field generic type warnings (django-stubs limitation)

[[tool.mypy.overrides]]
module = "*.tests.*"
disable_error_code = ["attr-defined", "misc", "union-attr", "index", "var-annotated", "name-defined"]  # Suppress factory-boy and test framework false positives

[[tool.mypy.overrides]]
module = "accounts.api"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
disable_error_code = ["misc"]        # Suppress django-stubs User/AnonymousUser union false positives

[[tool.mypy.overrides]]
module = "social.client"
disallow_untyped_defs = true         # External HTTP calls: strict typing required
disallow_incomplete_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "core.utils"
disallow_untyped_defs = true         # Shared utilities: strict typing required
disallow_incomplete_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "core.services.bulk"
disable_error_code = ["misc"]        # Suppress TYPE_CHECKING User vs AbstractBaseUser ORM lookups

# =============================================================================
# Per-Library Overrides (Third-party compatibility)
# =============================================================================

[[tool.mypy.overrides]]
module = "django_spellbook.*"
ignore_missing_imports = true        # No type stubs available yet

[[tool.mypy.overrides]]
module = "django_mercury.*"
ignore_missing_imports = true        # No type stubs available yet

[[tool.mypy.overrides]]
module = "decouple"
ignore_missing_imports = true        # No type stubs available

[[tool.mypy.overrides]]
module = "django.tasks"
ignore_missing_imports = true        # Django 6.0 Tasks - stubs pending

# =============================================================================
# Django Stubs Configuration
# =============================================================================

[tool.django-stubs]
django_settings_module = "_core.settings.base"  # Use base settings for type inference
strict_settings = false              # Don't require all settings to be typed

# =============================================================================
# Future Tool Configurations (Placeholder)
# =============================================================================
# You can add configurations for other tools later:
# [tool.black]      - Code formatter
# [tool.pytest]     - Test runner
# [tool.coverage]   - Coverage reporting
# [tool.ruff]       - Linter
